# nonebot-plugin-bertvits2

./: README.md  pyproject.toml
nonebot_plugin_bertvits2/: __init__.py  api.py  config.py
